<resources>
    <string name="app_name">KotlinPostSharingV2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="add_comment">Add Comment</string>
    <string name="select_image">Select Image</string>
    <string name="add_post">Add Post</string>
    <string name="username_test">UserName</string>
    <string name="post_image">post image</string>
    <string name="comment_text_test">Comment Text Test</string>
    <string name="delete">Delete</string>
    <string name="post_feed">Post Feed</string>
    <string name="log_out">Log Out</string>
    <string name="user_home">User Home</string>
</resources>