<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.userHome.AddPostFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="264dp"
        android:onClick="selectImage"
        android:contentDescription="@string/select_image"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/commentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/add_comment"
        android:autofillHints="name"
        android:inputType="text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />


    <Button
        android:id="@+id/addPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addPostBtnClick"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_background"
        android:padding="20dp"
        android:text="@string/add_post"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/commentText"
        app:layout_constraintStart_toStartOf="@+id/commentText"
        app:layout_constraintTop_toBottomOf="@+id/commentText" />


</androidx.constraintlayout.widget.ConstraintLayout>